--- a/TrainWithBrain/app/src/main/res/layout/main_list_routines.xml
+++ b/TrainWithBrain/app/src/main/res/layout/main_list_routines.xml
@@ -14,30 +14,24 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
 
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/darker_gray"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="0dp" />
+        app:srcCompat="@android:color/darker_gray" />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         tools:layout_editor_absoluteX="0dp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <ListView
@@ -49,5 +43,19 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/ic_input_add"
+        android:layout_marginRight="8dp"
+        android:onClick="goToAdd"
+        app:layout_constraintRight_toRightOf="@+id/imageView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp" />
 
 </android.support.constraint.ConstraintLayout>
