--- a/TrainWithBrain/app/src/main/res/layout/activity_add_routine.xml
+++ b/TrainWithBrain/app/src/main/res/layout/activity_add_routine.xml
@@ -15,11 +15,30 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="?attr/colorBackgroundFloating"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
+        <!--<android.support.v7.widget.Toolbar-->
+
+            <!--android:id="@+id/my_toolbar"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="56dp"-->
+            <!--android:background="?attr/colorBackgroundFloating"-->
+            <!--android:elevation="4dp"-->
+            <!--android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"-->
+            <!--app:layout_constraintHorizontal_bias="0.0"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!---->
+            <!--tools:layout_editor_absoluteY="-4dp" />-->
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_routine" />
+    <include layout="@layout/content_add_routine"
+        android:id="@+id/include" />
+
+
 
 </android.support.design.widget.CoordinatorLayout>
