--- a/TrainWithBrain/app/src/main/res/layout/activity_routines.xml
+++ b/TrainWithBrain/app/src/main/res/layout/activity_routines.xml
@@ -14,12 +14,17 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:background="?attr/colorBackgroundFloating"
+            app:theme="@style/ThemeOverlay.AppCompat.Light"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
+
+
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_routines" />
+    <include
+        layout="@layout/content_routines"
+        android:layout_height="772dp" />
 
 </android.support.design.widget.CoordinatorLayout>
