--- a/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
+++ b/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,28 +10,274 @@
     tools:showIn="@layout/activity_add_routine">
 
     <EditText
-        android:id="@+id/addName"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="25dp"
         android:ems="10"
+        android:hint="Training Name"
         android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="49dp" />
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="301dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <EditText
+        android:id="@+id/MuscleGroup1"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="21dp"
+        android:ems="10"
+        android:hint="Muscle Group"
+        android:inputType="textPersonName"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        tools:text="Muscle Group" />
+
+    <EditText
+        android:id="@+id/Exercise1"
+        android:layout_width="166dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:hint="Exercise"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/Set1"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
+        tools:text="exercise" />
+
+    <EditText
+        android:id="@+id/Set1"
+        android:layout_width="64dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:hint="Sets"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Exercise1"
+        app:layout_constraintRight_toLeftOf="@+id/Rep1"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
+        tools:layout_editor_absoluteY="188dp" />
+
+    <EditText
+        android:id="@+id/Rep1"
+        android:layout_width="56dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:hint="Reps"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Set1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1" />
+
+    <EditText
+        android:id="@+id/Exercise2"
+        android:layout_width="166dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="11dp"
+        android:ems="10"
+        android:hint="Exercise"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/Sets2"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise1"
+        tools:text="exercise" />
+
+    <EditText
+        android:id="@+id/Rep2"
+        android:layout_width="56dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Reps"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Sets2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Rep1" />
+
+    <EditText
+        android:id="@+id/Sets2"
+        android:layout_width="64dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Sets"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Exercise2"
+        app:layout_constraintRight_toLeftOf="@+id/Rep2"
+        app:layout_constraintTop_toBottomOf="@+id/Set1"
+        tools:layout_editor_absoluteY="245dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="301dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise2" />
+
+    <EditText
+        android:id="@+id/MuscleGroup2"
+        android:layout_width="215dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:hint="Muscle Group"
+        android:inputType="textPersonName"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        tools:text="Muscle Group" />
+
+    <EditText
+        android:id="@+id/Exercise3"
+        android:layout_width="166dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Exercise"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/Set3"
+        tools:text="exercise"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
+
+    <EditText
+        android:id="@+id/Set3"
+        android:layout_width="64dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="14dp"
+        android:ems="10"
+        android:hint="Sets"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Exercise3"
+        app:layout_constraintRight_toLeftOf="@+id/Rep3"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
+
+    <EditText
+        android:id="@+id/Rep3"
+        android:layout_width="56dp"
+        android:layout_height="38dp"
+        android:ems="10"
+        android:hint="Reps"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Set3"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
+
+    <EditText
+        android:id="@+id/Exercise4"
+        android:layout_width="166dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Exersice"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/Set4"
+        tools:text="exercise"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/Rep4"
+        android:layout_width="56dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="14dp"
+        android:ems="10"
+        android:hint="Reps"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/Set4"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Rep3"
+        app:layout_constraintVertical_bias="0.035" />
+
+    <EditText
+        android:id="@+id/Set4"
+        android:layout_width="64dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="18dp"
+        android:ems="10"
+        android:hint="Sets"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/Exercise4"
+        app:layout_constraintRight_toLeftOf="@+id/Rep4"
+        app:layout_constraintTop_toBottomOf="@+id/Set3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/addName"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.026"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
-        app:layout_constraintVertical_bias="0.059" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
+        app:layout_constraintVertical_bias="0.978" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.04" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline2"
+        app:layout_constraintGuide_begin="478dp"
+        android:orientation="horizontal" />
+
+
 </android.support.constraint.ConstraintLayout>
