--- a/TrainWithBrain/app/src/main/res/layout/main_list_routines.xml
+++ b/TrainWithBrain/app/src/main/res/layout/main_list_routines.xml
@@ -37,6 +37,7 @@
 
         <Button
             android:layout_marginRight="20dp"
+            android:onClick="onClick"
 
             android:id="@+id/delete"
             android:layout_width="wrap_content"
