--- a/TrainWithBrain/app/src/main/res/layout/activity_routines.xml
+++ b/TrainWithBrain/app/src/main/res/layout/activity_routines.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dk.now.just.trainwithbrain.Routines">
+    app:statusBarBackground="@android:color/darker_gray"
+    tools:context="dk.now.just.trainwithbrain.Routines"
+    tools:statusBarBackground="#cccccc">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -14,11 +16,10 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorBackgroundFloating"
-            app:theme="@style/ThemeOverlay.AppCompat.Light"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
-
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Light" />
 
 
     </android.support.design.widget.AppBarLayout>
