--- a/TrainWithBrain/app/src/main/res/layout/activity_main.xml
+++ b/TrainWithBrain/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:theme="@style/ThemeOverlay.AppCompat.Light"
-        tools:layout_editor_absoluteY="-4dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp" />
 
 
     <Button
