--- a/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
+++ b/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +8,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="dk.now.just.trainwithbrain.AddRoutine"
     tools:showIn="@layout/activity_add_routine">
-
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <EditText
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -256,14 +258,14 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.026"
+        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
-        app:layout_constraintVertical_bias="0.978" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise4"
+        app:layout_constraintVertical_bias="0.844" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -279,5 +281,5 @@
         app:layout_constraintGuide_begin="478dp"
         android:orientation="horizontal" />
 
-
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
