--- a/TrainWithBrain/app/src/main/res/menu/main_menu.xml
+++ b/TrainWithBrain/app/src/main/res/menu/main_menu.xml
@@ -10,10 +10,17 @@
         app:showAsAction="always"/>
     <item
 
+        android:id="@+id/action_timer"
+        android:icon="@drawable/ic_alarm_black_24dp"
+        android:title="Stop Wtach Button"
+        app:showAsAction="always" />
+    <item
+
         android:id="@+id/action_add"
         android:icon="@drawable/ic_add_circle_outline_black_24dp"
         android:title="@string/action_add"
         app:showAsAction="always"/>
+
 
 
 </menu>
