Final touches, icon, string and timer modifications

--- a/TrainWithBrain/app/src/main/res/layout/content_timer.xml
+++ b/TrainWithBrain/app/src/main/res/layout/content_timer.xml
@@ -46,12 +46,12 @@
             android:layout_weight="1"
             android:text="STOP" />
 
-        <Button
-            android:id="@+id/btnLap"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Lap" />
+        <!--<Button-->
+            <!--android:id="@+id/btnLap"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Lap" />-->
 
     </LinearLayout>
 
