--- a/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
+++ b/TrainWithBrain/app/src/main/res/layout/content_add_routine.xml
@@ -50,11 +50,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="18dp"
         android:ems="10"
         android:hint="Muscle Group"
         android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner"
@@ -62,81 +62,104 @@
 
     <EditText
         android:id="@+id/Exercise1"
-        android:layout_width="166dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="19dp"
+        android:layout_width="151dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:hint="Exercise"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/Set1"
         app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
-        tools:text="exercise" />
+        tools:text="exercise"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/Set1" />
 
     <EditText
         android:id="@+id/Set1"
-        android:layout_width="64dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="19dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
-        android:hint="Sets"
+        android:hint="Set"
         android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/Exercise1"
         app:layout_constraintRight_toLeftOf="@+id/Rep1"
-        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1" />
 
     <EditText
-        android:id="@+id/Rep1"
-        android:layout_width="56dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="19dp"
+        android:id="@+id/Kg1"
+        android:layout_width="34dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
-        android:hint="Reps"
+        android:hint="Kg"
         android:inputType="number"
-        app:layout_constraintLeft_toRightOf="@+id/Set1"
+        app:layout_constraintLeft_toRightOf="@+id/Rep1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1" />
 
     <EditText
+        android:id="@+id/Kg2"
+        android:layout_width="34dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="22dp"
+        android:ems="10"
+        android:hint="Kg"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Rep2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise1" />
+
+    <EditText
+        android:id="@+id/Rep1"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="17dp"
+        android:ems="10"
+        android:hint="Rep"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Set1"
+        app:layout_constraintRight_toLeftOf="@+id/Kg1"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup1" />
+
+    <EditText
         android:id="@+id/Exercise2"
-        android:layout_width="166dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="11dp"
+        android:layout_width="151dp"
+        android:layout_height="42dp"
         android:ems="10"
         android:hint="Exercise"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:text="exercise"
         app:layout_constraintRight_toLeftOf="@+id/Sets2"
-        app:layout_constraintTop_toBottomOf="@+id/Exercise1"
-        tools:text="exercise" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise1" />
 
     <EditText
         android:id="@+id/Rep2"
-        android:layout_width="56dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
-        android:hint="Reps"
+        android:hint="Rep"
         android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/Sets2"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Rep1" />
+        app:layout_constraintRight_toLeftOf="@+id/Kg2"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise1" />
 
     <EditText
         android:id="@+id/Sets2"
-        android:layout_width="64dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
-        android:hint="Sets"
+        android:hint="Set"
         android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/Exercise2"
         app:layout_constraintRight_toLeftOf="@+id/Rep2"
-        app:layout_constraintTop_toBottomOf="@+id/Set1"
-        tools:layout_editor_absoluteY="245dp" />
+        app:layout_constraintTop_toBottomOf="@+id/Exercise1" />
 
     <Spinner
+
         android:id="@+id/spinner2"
         android:layout_width="301dp"
         android:layout_height="25dp"
@@ -144,10 +167,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintHorizontal_bias="0.186"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@+id/Exercise2" />
 
     <EditText
@@ -164,28 +187,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner2"
-        tools:text="Muscle Group" />
+        tools:text="Muscle Group"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/Exercise3"
-        android:layout_width="166dp"
-        android:layout_height="40dp"
+        android:layout_width="151dp"
+        android:layout_height="42dp"
         android:ems="10"
         android:hint="Exercise"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/Set3"
         tools:text="exercise"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
+        android:layout_marginTop="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2"
+        app:layout_constraintRight_toLeftOf="@+id/Set3"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/Set3"
-        android:layout_width="64dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="14dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
-        android:hint="Sets"
+        android:hint="Set"
         android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/Exercise3"
         app:layout_constraintRight_toLeftOf="@+id/Rep3"
@@ -193,61 +218,85 @@
 
     <EditText
         android:id="@+id/Rep3"
-        android:layout_width="56dp"
-        android:layout_height="38dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
-        android:hint="Reps"
+        android:hint="Rep"
         android:inputType="number"
         app:layout_constraintLeft_toRightOf="@+id/Set3"
+        app:layout_constraintRight_toLeftOf="@+id/Kg3"
+        app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
+
+    <EditText
+        android:id="@+id/Kg3"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="23dp"
+        android:ems="10"
+        android:hint="Kg"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Rep3"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="14dp"
         app:layout_constraintTop_toBottomOf="@+id/MuscleGroup2" />
 
     <EditText
         android:id="@+id/Exercise4"
-        android:layout_width="166dp"
-        android:layout_height="40dp"
+        android:layout_width="151dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Exersice"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/Set4"
-        tools:text="exercise"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/Exercise3"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise3"
+        app:layout_constraintVertical_bias="0.044"
+        tools:text="exercise"
+        app:layout_constraintRight_toLeftOf="@+id/Set4" />
 
     <EditText
         android:id="@+id/Rep4"
-        android:layout_width="56dp"
-        android:layout_height="38dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Reps"
+        android:hint="Rep"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/Set4"
+        app:layout_constraintRight_toLeftOf="@+id/Kg4"
+        app:layout_constraintTop_toBottomOf="@+id/Exercise3"
+        app:layout_constraintVertical_bias="0.125" />
+
+    <EditText
+        android:id="@+id/Kg4"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="23dp"
+        android:ems="10"
+        android:hint="Kg"
+        android:inputType="number"
+        app:layout_constraintLeft_toRightOf="@+id/Rep4"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Rep3"
-        app:layout_constraintVertical_bias="0.035" />
+        app:layout_constraintTop_toBottomOf="@+id/Exercise3" />
 
     <EditText
         android:id="@+id/Set4"
-        android:layout_width="64dp"
-        android:layout_height="38dp"
+        android:layout_width="44dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="18dp"
         android:ems="10"
-        android:hint="Sets"
+        android:hint="Set"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/Exercise4"
         app:layout_constraintRight_toLeftOf="@+id/Rep4"
         app:layout_constraintTop_toBottomOf="@+id/Set3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.027" />
 
     <Button
         android:id="@+id/button3"
@@ -266,20 +315,6 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/Exercise4"
         app:layout_constraintVertical_bias="0.844" />
-
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.04" />
-
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline2"
-        app:layout_constraintGuide_begin="478dp"
-        android:orientation="horizontal" />
 
 </android.support.constraint.ConstraintLayout>
 </ScrollView>
